--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tempmail</h1>
+    <h1>Generador de Emails Temporales</h1>
     <button id="generate-email">Generar Email</button>
     <p id="email-address"></p>
     <div id="email-content"></div>
